libdbi (1.0pre1-2.syslogng30) syslogng30; urgency=low

  * Fixed packaging. Moved .a files to libdbi0 from libdbi0-dev.

 -- Tamas Pal <folti@balabit.com>  Tue, 30 Sep 2008 13:17:03 +0200

libdbi (1.0pre1-1.syslogng30) syslogng30; urgency=low

  * Modified debian packaging, deprecated lintian tags and removed docs.

 -- ZorpOS Maintainers <zorpos@balabit.com>  Fri, 08 Aug 2008 13:57:52 +0200

libdbi (0.8.2-3) syslogng30; urgency=low

  * New maintainer (Closes: #444424)
  * Now cleaning everything correctly on the clean target
  * Now managing updates of config.sub and config.guess correctly
  * Removed useless postinst and postrm from debian folder as they are
    generated by dh_makeshlibs anyway
  * Cleaned a bit the debian/rules for readability
  * Reviewed the debian/copyright for accuracy

 -- Thomas Goirand <thomas@goirand.fr>  Mon, 26 Nov 2007 05:53:13 +0000

libdbi (0.8.2-2) unstable; urgency=low

  * Added Conflicts: with old version of the libdbi-drivers binaries because
    of a binary conflict with the new version of the lib.

 -- Thomas Goirand <thomas@goirand.fr>  Sun, 25 Nov 2007 03:48:38 +0000

libdbi (0.8.2-1) unstable; urgency=low

  * I'm taking over maintainance of this orphaned package (Closes: #444424)
  * Change libdbi0 dependency for libdbi0-dev
  * New upstream release (Closes: #312115, #326748)
  * Not using dh_movefile anymore, but dh_install
  * Cleaned the debian/rules file
  * The .so link is now sent to the -dev package as it should
  * Now has correct build-depends and depends
  * Now creates a separated -doc package as the size of the doc is quite big

 -- Thomas Goirand <thomas@goirand.fr>  Sun, 30 Sep 2007 12:49:00 +0800

libdbi (0.7.2-1) unstable; urgency=low

  * New upstream release

 -- David Parker <david@neongoat.com>  Tue, 20 Jan 2004 13:27:51 -0800

libdbi (0.7.1-1) unstable; urgency=low

  * New upstream release (closes: #210747)
  * Drivers are now split off from the libdbi core project into the