@@ -1,3 +1,9 @@
+libdbi (1.0pre1-3.syslogng30) syslogng30dbg; urgency=low
+
+  * Added asprintf fix for Solaris/x64.
+
+ -- Balazs Scheidler <bazsi@balabit.com>  Sat, 04 Oct 2008 19:01:04 +0200
+
 libdbi (1.0pre1-2.syslogng30) syslogng30; urgency=low
 
   * Fixed packaging. Moved .a files to libdbi0 from libdbi0-dev.
